--- a/testing.html
+++ b/testing.html
@@ -285,6 +285,14 @@ Made with love and appreciation.">
     <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069784905875202058/ZJRJuAAAAAElFTkSuQmCC.png" style="width: 20px; height: 20px;" alt="Owner">
     <span class="badge-tooltiptext">Owner</span>
  </div>
+ <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069786518195011706/D9itSyJGugh5AAAAAElFTkSuQmCC.png" style="width: 20px; height: 20px;" alt="Staff">
+    <span class="badge-tooltiptext">Staff</span>
+ </div>
+ <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" style="width: 20px; height: 20px;" alt="Developer">
+    <span class="badge-tooltiptext">Developer</span>
+ </div>
 <div>
 <div class="contact-button-wrapper contact-button-wrapper-detail">
 <div id="discord" data-username="Convicted#0024" class="contact-button contact-button-dark contact-button-round w-inline-block"><img src="https://cdn.solo.to/images/contact/discord-min.svg" class="contact-button-image contact-button-image-dark"><div class="contact-button-text">Convicted#0024</div><div class="contact-button-copy-overlay noselect">✔</div></div>
