--- a/testing.html
+++ b/testing.html
@@ -293,6 +293,14 @@ Made with love and appreciation.">
     <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069750760830672997/g0UVkOwCsBnXhTOchGhta5ii4mUiv8D9mTavoXNFVLAAAAAElFTkSuQmCC.png" style="width: 20px; height: 20px;" alt="Developer">
     <span class="badge-tooltiptext">Developer</span>
  </div>
+ <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1068276158103306313/1069787253435551856/wtUOFpdYcEAlgAAAABJRU5ErkJggg.png" style="width: 20px; height: 20px;" alt="Bug Hunter">
+    <span class="badge-tooltiptext">Bug Hunter</span>
+ </div>
+ <div class="badge">
+    <img src="https://cdn.discordapp.com/attachments/1069592850569887815/1069786990100361266/wFQXb8E4SJbzQAAAABJRU5ErkJggg.png" style="width: 20px; height: 20px;" alt="Manager">
+    <span class="badge-tooltiptext">Manager</span>
+ </div>
 <div>
 <div class="contact-button-wrapper contact-button-wrapper-detail">
 <div id="discord" data-username="Convicted#0024" class="contact-button contact-button-dark contact-button-round w-inline-block"><img src="https://cdn.solo.to/images/contact/discord-min.svg" class="contact-button-image contact-button-image-dark"><div class="contact-button-text">Convicted#0024</div><div class="contact-button-copy-overlay noselect">✔</div></div>
