--- a/testing2.html
+++ b/testing2.html
@@ -82,7 +82,7 @@
                     <div data-w-id="df270605-579b-e9a8-6916-ca9b2a24c5f8" class="div-title">
                         <div class="spr-60px"></div>
                         <div data-w-id="9e5e3ac9-4e17-696c-e4c5-51676d09ccf7" style="opacity:0" class="div-main-img">
-                            <img src="assets/images/nix.png"
+                            <img src="https://cdn.discordapp.com/emojis/969170636758982726.webp?size=96&quality=lossless"
                                 loading="eager" width="50" alt="Nix" class="img-nix" />
                             <p class="text-paragraph text-sub-header">@Killa.lol</p>
                         </div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="center-text w-col w-col-6"> <img
-                        src="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"
+                        src="https://media.discordapp.net/attachments/1051942010963099788/1054091278519914636/1030806014599123006.gif"
                         loading="eager" width="max-width: 200px; min-width: 5px" style="opacity:0" data-w-id="01bdf64a-c19a-bf47-daf2-8d48b413cfce"
                         alt="Nix UI" class="img-main" /></div>
             </div>
@@ -163,12 +163,12 @@
                 <p class="text-title-subtext">TOS</p>
                 <p class="text-paragraph">Attempting any malicious activity towards the website will result in account termination.</p>
             </div>
-            <div class="div-img-features"><img src="https://cdn.discordapp.com/attachments/1070081277664972821/1070082331626442833/image.png" loading="lazy" data-w-id="-738878a7-6032-016e-cf2d-c43fdfd3e358"
+            <div class><img src="https://cdn.discordapp.com/attachments/1070081277664972821/1070082331626442833/image.png" loading="lazy" data-w-id="-738878a7-6032-016e-cf2d-c43fdfd3e358"
                 style="opacity:1" alt="Nix Customization" class="img-gall-1" />
             </div> 
         </div>    
         <div class="flexwhyus">
-            <div class="div-img-features secondsFeature"><img src="https://cdn.discordapp.com/attachments/1070081277664972821/1070081596184600648/image.png" loading="lazy" data-w-id="-738878a7-6032-016e-cf2d-c43fdfd3e358"
+            <div class><img src="https://cdn.discordapp.com/attachments/1070081277664972821/1070081596184600648/image.png" loading="lazy" data-w-id="-738878a7-6032-016e-cf2d-c43fdfd3e358"
                 style="opacity:1" alt="Nix Customization" class="img-gall-1" />
             </div> 
             <div class="whyusbox leftText">
