--- a/testing2.html
+++ b/testing2.html
@@ -186,27 +186,27 @@
     <div id="features-sec">
         <div id="cards">
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Custom Favicons</h3><h4>All our icons are customized for the cleanest look on your profile.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Custom Badges</h3><h4>All our badges are custom made for the best look and experience and to flex your badges to your friends.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Custom Discord Embed</h3><h4>when sending your profile link in a discord chat it gets sen't with a custom embed,And no this isnt bannable nor TOS illegal.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Looks</h3><h4>We aim for the cleanest look on your profile, we have alot of features like snowflakes \ Username sparkle / Custom avatars +more.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Music</h3><h4>We provide music of your choice on your profile.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="fa-solid fa-code faicon"></i><div class="card-info-title">
+                <i class=""></i><div class="card-info-title">
                 <h3>Responsive</h3><h4>Look great at every screen right out of the box, from phones to desktops.</h4></div></div></div></div>
             </div>
         </div>
