--- a/testing2.html
+++ b/testing2.html
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="@Killa Homepage">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://killa.lol">
-    <meta property="og:title" content="Nix Selfbot">
+    <meta property="og:title" content="killa.lol, an affordable biolink service.">
     <meta property="og:description" content="premium biolink service, affordable pricetag.">
     <meta property="og:image" content="https://cdn.discordapp.com/emojis/969170636758982726.webp?size=96&quality=lossless">
     <meta name="theme-color" content="#7875ff">
@@ -84,7 +84,7 @@
                         <div data-w-id="9e5e3ac9-4e17-696c-e4c5-51676d09ccf7" style="opacity:0" class="div-main-img">
                             <img src="https://cdn.discordapp.com/emojis/969170636758982726.webp?size=96&quality=lossless"
                                 loading="eager" width="50" alt="Nix" class="img-nix" />
-                            <p class="text-paragraph text-sub-header">@Killa.lol</p>
+                            <p class="text-paragraph text-sub-header">@killa.lol</p>
                         </div>
                         <div class="spr-20px"></div><div class="spr-20px"></div>
                         <h1 data-w-id="632cdaaf-3164-6491-9cf1-66a6f5483d8d" style="opacity:0"
@@ -168,7 +168,7 @@
                 style="opacity:1" alt="Nix Customization" class="img-gall-1" />
             </div> 
             <div class="whyusbox leftText">
-                <p class="text-title-subtext">Killa.lol</p>
+                <p class="text-title-subtext">killa.lol</p>
                 <h1 class="text-header">Clean and Stylish UI</h1>
                 <div class="spr-10px"></div>
                 <p class="text-paragraph">we provide clean looks and stylish profiles for an affordable price.</p>
