--- a/k.html
+++ b/k.html
@@ -61,8 +61,8 @@
                             class="text-navlink w-nav-link">Features</a>
                         <div class="div-navline"></div>
                     </div>
-                    <div data-w-id="de9bb864-12b2-15a6-ba0f-6ba832416a33" class="div-navtext"><a href="https://discord.gg/ssKraVFH" target="_blank"
-                            class="text-navlink w-nav-link">Discord</a>
+                    <div data-w-id="de9bb864-12b2-15a6-ba0f-6ba832416a33" class="div-navtext"><a href="https://discord.com/api/oauth2/authorize?client_id=1070106326035865712&permissions=8&scope=bot" target="_blank"
+                            class="text-navlink w-nav-link">Invite</a>
                         <div class="div-navline"></div>
                     </div>
                 </div>
@@ -80,15 +80,15 @@
                         <div data-w-id="9e5e3ac9-4e17-696c-e4c5-51676d09ccf7" style="opacity:0" class="div-main-img">
                             <img src="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"
                                 loading="eager" width="50" alt="Nix" class="img-nix" />
-                            <p class="text-paragraph text-sub-header">@anti-nuke/AIO bot</p>
+                            <p class="text-paragraph text-sub-header">@Discord Bot</p>
                         </div>
                         <div class="spr-20px"></div><div class="spr-20px"></div>
                         <h1 data-w-id="632cdaaf-3164-6491-9cf1-66a6f5483d8d" style="opacity:0"
-                            class="text-header text-56px">Convicted<br /></h1>
+                            class="text-header text-56px">Convict <br /></h1>
                         <h1 data-w-id="62e7340b-d4b6-daa0-3c5a-1b7dca34296a" style="opacity:0"
-                            class="text-header text-36px">© 2023 Referall Rights.<br /></h1>
+                            class="text-header text-36px">© 2023 Referall Rights.<br /></h1>https://discord.gg/ssKraVFH
                         <div class="spr-40px"></div><a href="https://discord.gg/ssKraVFH" data-w-id="d9c3a0fb-a113-8c53-a198-b6f0f7590221"
-                            style="opacity:0" class="btn btn-grey btn-150px w-button">Discord</a>
+                            style="opacity:0" class="btn btn-purple btn-150px w-button">Discord</a>
                     </div>
                 </div>
             </div>
@@ -122,31 +122,17 @@
     <div id="features-sec">
         <div id="cards">
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Security</h3>@AntiNuke<h4>This is where our bot protects your server from any nukes or people trying to raid your server, our bot can keep your server Protected, Safe, and Wonderful.</h4></div></div></div></div>
+                <img src="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
+                <h3>Security</h3>@AntiNuke<h4>This is where our bot protects your server from any nukes or people trying to raid your server.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
+                <img src="https://cdn.discordapp.com/emojis/1070416630322036786.webp?size=96&quality=lossless"></i><div class="card-info-title">
                 <h3>Moderation</h3>@Commands<h4>Our bot has 30+ Moderation commands that you can use to moderate or utilize your server.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
+                <img src="https://cdn.discordapp.com/emojis/1070416641093009538.webp?size=96&quality=lossless"></i><div class="card-info-title">
                 <h3>Connection</h3>@Secured<h4>Our bot is 1 in a 10000 to be delayed, theres absolute 0 delay to using our bot its always fast and secure connected.</h4></div></div></div></div>
             </div>
-            <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Host</h3>@Uptime<h4>Our bot is hosted 24/7 and turns off only when we add a new update or update anything on its name.</h4></div></div></div></div>
-            </div>
-            <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1066947372011225098.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>.</h3>@Developers<h4>
-                    Convicted#0024
-                    Seized#0001
-                </h4></div></div></div></div>
-            </div>
-            <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <i class="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Bot</h3>@Info<h4>Always remember that the bot goes by the name "Convicted#9478" anything eles is an impersonator trying to invade your server</h4></div></div></div></div>
             </div>
         </div>
     </div>
