--- a/k.html
+++ b/k.html
@@ -122,16 +122,16 @@
     <div id="features-sec">
         <div id="cards">
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
-                <img src="https://cdn.discordapp.com/emojis/1036344470108643389.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Security</h3>@AntiNuke<h4>This is where our bot protects your server from any nukes or people trying to raid your server.</h4></div></div></div></div>
+                <img src="https://cdn.discordapp.com/emojis/1070416621199425576.webp?size=96&quality=lossless"></i><div class="card-info-title">
+                <h3>Security</h3>@AntiNuke<h4>Protection from raiders.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
                 <img src="https://cdn.discordapp.com/emojis/1070416630322036786.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Moderation</h3>@Commands<h4>Our bot has 30+ Moderation commands that you can use to moderate or utilize your server.</h4></div></div></div></div>
+                <h3>Moderation</h3>@Commands<h4>utillize the server.</h4></div></div></div></div>
             </div>
             <div class="card hidden"><div class="card-content"><div class="card-info-wrapper"><div class="card-info">
                 <img src="https://cdn.discordapp.com/emojis/1070416641093009538.webp?size=96&quality=lossless"></i><div class="card-info-title">
-                <h3>Connection</h3>@Secured<h4>Our bot is 1 in a 10000 to be delayed, theres absolute 0 delay to using our bot its always fast and secure connected.</h4></div></div></div></div>
+                <h3>Connection</h3>@Secured<h4>no data stored,no delay.</h4></div></div></div></div>
             </div>
             </div>
         </div>
