--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </a>
  <span style="font-weight: bold;text-shadow: 0 0 3px #ffffff00;">+</span>
  Private Biolink Services.
- <a href="https://extorted.live"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Credits</span> | <a href="https://discordapp.com/users/1087947685245501441"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
+ <a href="https://extorted.live"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Credits</span> | <a href="https://discord.gg/RVBt6eET"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
  <span id="typElement"></span>
  </pre>
  </div>
