--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:footer" content="to request a biolink join | https://discord.gg/RVBt6eET" />
   <meta property="og:url" content="https://killa.lol" />
   <meta property="og:image" content="https://cdn.discordapp.com/attachments/1089837598912020571/1090394318000357446/wBhxLs4Y81a9gAAAABJRU5ErkJggg.png" />
-  <meta name="theme-color" content="#000000"> 
+  <meta name="theme-color" content="#2f3136"> 
   <audio autoplay="true" src="swamp.mp3"></audio>
   <link href="css/stopcheckingmysourceyouskid.css" rel="stylesheet">
 
@@ -41,7 +41,7 @@
 </a>
  <span style="font-weight: bold;text-shadow: 0 0 3px #ffffff00;">+</span>
  Private Biolink Services.
- <a href="https://extorted.live"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Credits</span> | <a href="https://discord.gg/RVBt6eET"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
+ <a href="https://extorted.live"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Credits</span> | <a href="https://discord.gg/izo"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
  <span id="typElement"></span>
  </pre>
  </div>
@@ -153,8 +153,7 @@ xd
  function type() {
      let strs = [
          "Welcome to killa.lol ",
-         "check out extorted.live - made by pep/yoda",
-		 "big love to yoda/pep | Extorted.live",
+	 "s/o Extorted.live",
  ];
  var num = getRandomInt(strs.length);
  
