--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </a>
  <span style="font-weight: bold;text-shadow: 0 0 3px #ffffff00;">+</span>
  Private Biolink Services.
- <a href="https://extorted.live"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Credits</span> | <a href="https://discord.gg/izo"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
+ <a href="https://fishnet.lol"><span style="font-weight: bold;text-shadow: 0 0 5px #ffffff00;">Fishnet</span> | <a href="https://discord.gg/hitlist"><span style="font-weight: bold;text-shadow: 0 0 5px #ff00ea00;">Request Here</a>
  <span id="typElement"></span>
  </pre>
  </div>
@@ -152,8 +152,7 @@ xd
  
  function type() {
      let strs = [
-         "Welcome to killa.lol ",
-	 "s/o Extorted.live",
+         "Welcome to killa.lol",
  ];
  var num = getRandomInt(strs.length);
  
