--- a/athena.html
+++ b/athena.html
@@ -41,7 +41,7 @@
   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 100%); text-align: center;"><a href="https://www.roblox.com/users/915094243/profile">⛧ Roblox ⛧</span></a>
   <div class="flex justify-center items-center space-x-2"><a href="https://discord.com/users/1084002261988032562" target="_blank"><img src="https://discord.c99.nl/widget/theme-4/1084002261988032562.png" style="width: 300px;"></a>
   <span id="typElement"></span>
-  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 100%); text-align: center;"><a href="">https://discord.gg/hitlist</span></a>
+  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 100%); text-align: center;"><a href="https://discord.gg/hitlist"></span></a>
   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 100%); text-align: center;"><a href="https://pnrtscr.com/kqrkc7"></span></a>
 </pre>
   </div>
